# kanban-backend

./: README.md  data.py  main.py  pyproject.toml  requirements.txt
board/: __init__.py  models.py  router.py  service.py
board_list/: __init__.py  models.py  router.py  schemas.py  service.py
board_task/: __init__.py  models.py  router.py  service.py
scripts/: requirements.ps1
static/: 404.html  index.html
static/assets/: index-1534a412.css  index-369ee19e.js  index-8d7534da.js  index-ff492200.css
