[tool.poetry]
name = "backend-demo"
version = "0.1.0"
description = ""
authors = ["erlnby <zolotoie@gmail.com>"]
readme = "README.md"
packages = [{ include = "backend_demo" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
uvicorn = { extras = ["standard"], version = "^0.20.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
