[tool.poetry]
name = "backend-demo"
version = "0.1.0"
description = ""
authors = ["Daniil Utkin <utkin@utkin.tech>"]
readme = "README.md"
packages = [{ include = "backend_demo" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
